# agentgrid

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  OPEN_SOURCE.md  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/agentgrid-cli/: Cargo.toml
apps/agentgrid-cli/src/: main.rs
apps/agentgrid-control/: Cargo.toml
apps/agentgrid-control/src/: main.rs
apps/agentgrid-hub/: Cargo.toml  README.md  run.sh  server.py  stop.sh
apps/agentgrid-hub/src/: agents.rs  artifacts.rs  auth.rs  diagnostics.rs  jobs.rs  main.rs  messages.rs  nodes.rs  routes.rs  runtime_standard.rs  security.rs  settings.rs  tasks.rs  tools.rs  webhooks.rs  workbenches.rs  workflows.rs
apps/agentgrid-mcp/: Cargo.toml
apps/agentgrid-mcp/src/: main.rs
apps/agentgrid-mobile-ios/: README.md
apps/agentgrid-mobile-ios/AgentGridMobile/: App.swift  ContentView.swift  Info.plist
apps/agentgrid-mobile-ios/AgentGridMobile.xcodeproj/: project.pbxproj
apps/agentgrid-mobile-ios/AgentGridMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/agentgrid-web/: index.html  package-lock.json  package.json  vite.config.js
apps/agentgrid-web/public/docs/: agentgrid-command-reference.html  agentgrid-command-reference.md  cli.md  server-assets.md
apps/agentgrid-web/public/docs/zh-CN/: cli.md
apps/agentgrid-web/src/: api.js  format.js  main.jsx  style.css
apps/agentgrid-worker/: Cargo.toml
apps/agentgrid-worker/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
crates/agentgrid-control/: Cargo.toml
crates/agentgrid-control/src/: lib.rs
crates/agentgrid-core/: Cargo.toml
crates/agentgrid-core/src/: lib.rs
crates/agentgrid-executor/: Cargo.toml
crates/agentgrid-executor/src/: lib.rs
crates/agentgrid-protocol/: Cargo.toml
crates/agentgrid-protocol/src/: agent_message.rs  compute.rs  error.rs  lib.rs
crates/agentgrid-scheduler/: Cargo.toml
crates/agentgrid-scheduler/src/: lib.rs
crates/agentgrid-sdk/: Cargo.toml
crates/agentgrid-sdk/src/: lib.rs
crates/agentgrid-store/: Cargo.toml
crates/agentgrid-store/src/: lib.rs
crates/agentgrid-worker/: Cargo.toml
crates/agentgrid-worker/src/: lib.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/src/: lib.rs
deploy/: deploy-agentgrid-hub.sh
deploy/systemd/: agentgrid-hub.service
docs/: agent-message.md  agent-onboarding.md  agent-task-protocol.md  agentgrid-command-reference.md  agentgrid-standards.md  api-standard.md  architecture.md  artifacts.md  cli.md  deployment.md  evidence-pipeline-v2.md  hub-api.md  hub-qa-checklist.md  hub-storage.md  hub-task-api.md  install.md  job-runtime-v2.md  maturity.md  mobile-sdk.md  node-join-standard.md  plugin-runtime-v2.md  project-structure.md  quickstart.md  release.md  requirements.md  review-rules.md  roadmap.md  server-assets.md  vision.md
docs/openapi/: agentgrid-openapi.yaml
docs/zh-CN/: architecture.md  artifacts.md  cli.md  deployment.md  install.md  maturity.md  mobile-console-product-plan.md  mobile-ios-app-development.md  mobile-sdk.md  node-join.md  quickstart.md  release.md  roadmap.md  vision.md
examples/: cross-node-hostname-workflow.json  workflow-result-passing.json
examples/agent-messages/: contract-changed.json  task-progress.json
examples/plugins/: audio-tts-clone.jia-node-tool.json  hello-plugin  index-tts-clone
examples/workflows/: workflow-v2-optional-continue.json
schemas/: agent-task-result.schema.json  agent-task.schema.json  api-error.schema.json  capability-graph.schema.json  evidence-item.schema.json  job-contract.schema.json  placement-contract.schema.json  plugin-manifest.schema.json
schemas/v1/: agent-task.schema.json
scripts/: check-android-mobile-sdk.sh  e2e-codex-bridge.sh  e2e-hub-worker-cli.sh  install-agentgrid-worker.sh  install-linux-systemd.sh  install-macos-launchd.sh  install-windows-agentgrid.ps1  install-windows-service.ps1  install.ps1  install.sh  publish-worker-updates.sh  validate-agentgrid-schemas.js
sdk/mobile/: README.md
sdk/mobile/android/: README.md  build.gradle.kts  settings.gradle.kts
sdk/mobile/android/agentgrid-mobile-sdk-kotlin/: README.md  build.gradle.kts  consumer-rules.pro
sdk/mobile/android/agentgrid-mobile-sdk-kotlin/src/main/java/io/agentgrid/mobile/: AgentGridMobileClient.kt
sdk/mobile/android/agentgrid-mobile-sdk-kotlin/src/test/java/io/agentgrid/mobile/: AgentGridMobileClientTest.kt
sdk/mobile/ios/agentgrid-mobile-sdk-swift/: Package.swift  README.md
sdk/mobile/ios/agentgrid-mobile-sdk-swift/Sources/AgentGridMobileSDK/: AgentGridMobileClient.swift
sdk/node/: index.js  package.json
sdk/python/: agentgrid_sdk.py
