[workspace]
members = [
    "apps/agentgrid-cli",
    "apps/agentgrid-control",
    "apps/agentgrid-hub",
    "apps/agentgrid-mcp",
    "apps/agentgrid-worker",
    "apps/cli",
    "apps/daemon",
    "crates/agentgrid-control",
    "crates/agentgrid-core",
    "crates/agentgrid-executor",
    "crates/agentgrid-protocol",
    "crates/agentgrid-scheduler",
    "crates/agentgrid-sdk",
    "crates/agentgrid-store",
    "crates/agentgrid-worker",
    "crates/scheduler-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["AI Task Scheduler Contributors"]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "process", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
