[package]
name = "agentgrid-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agentgrid-mcp"
path = "src/main.rs"

[dependencies]
agentgrid-sdk = { path = "../../crates/agentgrid-sdk" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
