[package]
name = "agentgrid-worker-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agentgrid-worker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64 = "0.22"
clap.workspace = true
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
agentgrid-executor = { path = "../../crates/agentgrid-executor" }
agentgrid-protocol = { path = "../../crates/agentgrid-protocol" }
futures-util = "0.3"
portable-pty = "0.9"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sysinfo = "0.37"
tokio.workspace = true
tokio-tungstenite = "0.24"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
