[package]
name = "ai-task-scheduler-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ai-taskd"
path = "src/main.rs"

[dependencies]
scheduler-core = { path = "../../crates/scheduler-core" }
clap = { version = "4", features = ["derive"] }
