[package]
name = "agentgrid-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentgrid-protocol = { path = "../agentgrid-protocol" }
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22"
chrono.workspace = true
